WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203834
Content can disappear with a combination of <video> with controls and clipping
https://bugs.webkit.org/show_bug.cgi?id=203834
Summary
Content can disappear with a combination of <video> with controls and clipping
Simon Fraser (smfr)
Reported
2019-11-04 17:48:34 PST
Content can disappear with a combination of <video> with controls and clipping
Attachments
Patch
(7.56 KB, patch)
2019-11-04 17:50 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-11-04 17:50:13 PST
Created
attachment 382794
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-11-04 17:50:15 PST
<
rdar://problem/56559648
>
WebKit Commit Bot
Comment 3
2019-11-05 12:11:40 PST
Comment on
attachment 382794
[details]
Patch Clearing flags on attachment: 382794 Committed
r252070
: <
https://trac.webkit.org/changeset/252070
>
WebKit Commit Bot
Comment 4
2019-11-05 12:11:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug